--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>The Gallery Cafe</h1>
     <h6>About Us</h6>
     <p>Lorem ipsum,<b>Lorem ipsum dolor sit amet.</b>  dolor sit amet consectetur adipisicing elit. Rem magnam illum modi neque quidem obcaecati eveniet quas, quisquam omnis excepturi culpa aperiam cupiditate?
-         Minima, consectetur. Perspiciatis sit libero provident natus?</p>
-</body>
+         Minima, consectetur. </br> Perspiciatis sit libero provident natus?</p>
+        <a href="" >Rate Us</a>
+        <a href="">Follow us</a>
+        </body>
 </html>
