--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
 </head>
 <body>
     <h1>The Gallery Cafe</h1>
-    <h6>About Us</h6>
+    <h3>About Us</h3>
     <p>Lorem ipsum,<b>Lorem ipsum dolor sit amet.</b>  dolor sit amet consectetur adipisicing elit. Rem magnam illum modi neque quidem obcaecati eveniet quas, quisquam omnis excepturi culpa aperiam cupiditate?
          Minima, consectetur. </br> Perspiciatis sit libero provident natus?</p>
         <a href="" >Rate Us</a>
         <a href="">Follow us</a>
+        <hr>
+        <h1>Menu</h1><br>
+        <h3>South Indian</h3>
+        <ol>
+            <li>
+                Dosa
+            </li>
+            <li>
+                Idli 
+            </li>
+
+        </ol>
+
         </body>
 </html>
