--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="" >Rate Us</a>
         <a href="">Follow us</a>
         <hr>
-        <h1>Menu</h1><br>
-        <h3>South Indian</h3>
+        <h1>Menu</h1>
+        <h4>South Indian</h4>
         <ol>
             <li>
                 Dosa
@@ -22,8 +22,36 @@
             <li>
                 Idli 
             </li>
-
+            <li>
+                Utpam 
+            </li>
+        </ol>
+        <h4>Punjabi</h4>
+        <ol>
+            <li>
+                Chaap
+            </li>
+            <li>
+                Chole Kulche
+            </li>
+            <li>
+                Aloo paratha
+            </li>
+        </ol>
+        <h4>Extras</h4>
+        <ol>
+            <li>
+                Pizza
+            </li>
+            <li>
+                Nachos
+            </li>
+            <li>
+                Lasagne
+            </li>
         </ol>
 
+        
+        
         </body>
 </html>
