--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>The Gallery Cafe</h1>
     <h3>About Us</h3>
     <p>Lorem ipsum,<b>Lorem ipsum dolor sit amet.</b>  dolor sit amet consectetur adipisicing elit. Rem magnam illum modi neque quidem obcaecati eveniet quas, quisquam omnis excepturi culpa aperiam cupiditate?
-         Minima, consectetur. </br> Perspiciatis sit libero provident natus?</p>
+    </br> Minima, consectetur.  Perspiciatis sit libero provident natus?</p>
         <a href="" >Rate Us</a>
         <a href="">Follow us</a>
         <hr>
@@ -26,6 +26,7 @@
                 Utpam 
             </li>
         </ol>
+        <hr>
         <h4>Punjabi</h4>
         <ol>
             <li>
@@ -38,6 +39,7 @@
                 Aloo paratha
             </li>
         </ol>
+        <hr>
         <h4>Extras</h4>
         <ol>
             <li>
@@ -50,8 +52,21 @@
                 Lasagne
             </li>
         </ol>
-
-        
-        
+        <hr><hr>
+        <h1>Contact</h1>
+        <p>
+            <pre>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nulla nostrum temporibus consectetur. Et ducimus tempore, sunt soluta cumque optio, sed hic numquam perspiciatis id voluptatibus ad. Praesentium</pre>
+            <pre>doloremque repellat quo, The Biggest Dhaba Chain dolorum voluptatem eveniet. Aut ad possimus modi, asperiores iste incidunt vero. Doloremque culpa quae quisquam ipsum qui neque esse voluptatum,</pre>
+            <pre>numquam quo unde porro expedita veritatis fugiat non laboriosam voluptates animi nemo molestias eveniet reiciendis error iure nulla debitis! Voluptate cupiditate sunt saepe voluptatibus aspernatur.</pre>
+            <pre>Atque eaque necessitatibus reiciendis sed pariatur sunt fugiat iusto eveniet inventore aliquam autem corporis ab exercitationem labore deleniti nihil enim, totam at expedita error. Veritatis repellendus</pre>
+            <pre>amet dolor error expedita a facilis nulla sapiente doloremque neque deserunt illum dignissimos sequi nesciunt consequatur minima rerum in fugit est, voluptatum quibusdam. Dicta, neque earum enim ea</pre>
+            <pre>incidunt, aut quis quia sapiente rerum architecto ab esse labore! Illum fugiat amet, possimus eius optio aspernatur est suscipit asperiores molestias corrupti beatae, consectetur tempora placeat ipsam ex,</pre>
+            <pre>eaque quo. Aliquid voluptas ad beatae itaque veritatis animi sed odio autem ipsum inventore est incidunt ut facere fugit distinctio, non id natus. Nulla saepe molestias dolorum, veniam ipsum excepturi quos</pre>
+            <pre>nihil quas minus corrupti at officiis facere labore asperiores nisi aperiam. Vitae ex ullam nihil tenetur, doloribus possimus eaque magnam ipsum molestiae quasi, tempora dolor, reiciendis nisi ab eveniet?</pre>
+            <pre>Ratione, officia provident totam quam nulla distinctio eos molestias eligendi neque, ab animi beatae non explicabo ipsam accusamus, saepe doloremque nobis et sed amet numquam vitae. Ipsam, itaque</pre>
+            <pre>debitis odit quibusdam alias consequatur deleniti quas ea blanditiis exercitationem sapiente impedit a iste nesciunt sint deserunt eligendi autem? Maiores illo nobis est delectus recusandae, sit vel obcaecati</pre>
+            <pre>voluptates sint iusto, dolores ipsa eum, maxime odio architecto repellat aliquid incidunt amet. Aliquid perferendis a quas exercitationem numquam doloribus beatae quia soluta consequatur quasi dicta culpa</pre>
+            <pre>porro, itaque</pre>
+        </p>
         </body>
 </html>
